--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 spring:
   application:
     name: genie_tune_java
+  # local 개발용 import
+  config:
+    import: "optional:classpath:secret/secret.yml"
+  # 자동 생성해주는 것들 제외하는 것
+  autoconfigure:
+    exclude:
+      # Spring Security에서 기본 유저 생성 제외
+      - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
   # docker- 배포용 설정
   data:
     redis:
@@ -11,7 +19,18 @@ spring:
     url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
-  # local 개발용 import
-  config:
-    import: "optional:classpath:secret/secret.yml"
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+jwt:
+  secret: ${JWT_SECRET}
+  access-token-expiration: ${JWT_ACCESS_EXPIRATION}
+  refresh-token-expiration: ${JWT_REFRESH_EXPIRATION}
+
 
