--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   // API 호출 방식(GraphQL)
   implementation 'org.springframework.boot:spring-boot-starter-graphql'
+  //GraphiQL 기능
+  implementation("com.graphql-java:graphiql-spring-boot-starter:5.0.2")
   // 내장 Security
   implementation 'org.springframework.boot:spring-boot-starter-security'
   // 여기서 logging 제외 안하면 Log4j2 터짐
@@ -65,6 +67,10 @@ dependencies {
   implementation 'org.mapstruct:mapstruct:1.6.3'
   annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
   annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
+  //백단 내에 간단한 유효성 검증 의존성 기능 추가
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 }
 
 tasks.named('test') {
