--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,26 @@ spring:
       enabled: true
       path: /graphiql
 
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.security.web.FilterChainProxy: DEBUG
+    org.springframework.security.web.access: DEBUG
+    org.springframework.security.authorization: DEBUG
+    org.springframework.security.web.access.intercept.AuthorizationFilter: DEBUG
+    org.springframework.security.web.access.ExceptionTranslationFilter: DEBUG
+    org.springframework.boot.web.servlet.error: DEBUG
+    org.springframework.graphql: DEBUG
+
+server:
+  error:
+    include-exception: true
+    include-message: always
+    include-stacktrace: always
+
+
+
+
 jwt:
   secret: ${JWT_SECRET}
   access-token-expiration: ${JWT_ACCESS_EXPIRATION}
