251217 사업자등록증 상태조회 프론트-백 연결완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,8 @@ logging:
     org.springframework.security.web.access.ExceptionTranslationFilter: DEBUG
     org.springframework.boot.web.servlet.error: DEBUG
     org.springframework.graphql: DEBUG
+    org.springframework.web.reactive.function.client: DEBUG
+    reactor.netty.http.client: DEBUG
 
 server:
   error:
