260103 주문 생성  백단 로직 구현, PortOne 연동 일부 구현(token 발급 성공 확인), 결제 정보 사전등록 백단 로직 구현, 서비스 로직 결합 파사드 구상 중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,3 +84,8 @@ security:
   aes:
     secret: ${AES_SECRET}
     iv: ${AES_IV}
+
+portone:
+  api-secret: ${PORTONE_SECRET}
+  base-url: ${PORTONE_BASE_URL}
+  store-id: ${PORTONE_STORE_ID}
