--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -89,3 +89,4 @@ portone:
   api-secret: ${PORTONE_SECRET}
   base-url: ${PORTONE_BASE_URL}
   store-id: ${PORTONE_STORE_ID}
+  channel-key: ${PORTONE_CHANNEL_KEY}
