--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,10 @@ dependencies {
   //Graphql에서 LocalDateTime 등의 type을 읽을 수 있도록 스칼라 로직을 짜주는 라이브러리
   implementation 'com.graphql-java:graphql-java-extended-scalars:18.1'
 
+  //AWS S3Util 사용을 위한 의존성
+  implementation platform("software.amazon.awssdk:bom:2.25.59")
+  implementation "software.amazon.awssdk:s3"
+
 }
 
 tasks.named('test') {
